backgroung component with animation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CultureVault - Culture Heritage Management</title>
+    <title>SEN - Kiến tạo trải nghiệm lịch sử, văn hoá bằng công nghệ</title>
   </head>
   <body>
     <div id="root"></div>
