--- a/index.html
+++ b/index.html
@@ -3,7 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>SEN - Kiến tạo trải nghiệm lịch sử, văn hoá bằng công nghệ</title>
+    <meta
+      name="title"
+      content="SEN - Kiến tạo trải nghiệm lịch sử, văn hoá bằng công nghệ"
+    />
+    <meta
+      name="description"
+      content="Khám phá di sản văn hóa Việt Nam qua nền tảng công nghệ hiện đại. SEN mang đến trải nghiệm tương tác với lịch sử và văn hóa một cách sống động."
+    />
+    <meta
+      name="keywords"
+      content="di sản văn hóa, lịch sử Việt Nam, văn hóa Việt Nam, hiện vật, di tích, SEN"
+    />
+    <meta name="author" content="SEN Team" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sen.vn/" />
+    <meta
+      property="og:title"
+      content="SEN - Kiến tạo trải nghiệm lịch sử, văn hoá bằng công nghệ"
+    />
+    <meta
+      property="og:description"
+      content="Khám phá di sản văn hóa Việt Nam qua nền tảng công nghệ hiện đại."
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://sen.vn/" />
+    <meta
+      property="twitter:title"
+      content="SEN - Kiến tạo trải nghiệm lịch sử, văn hoá bằng công nghệ"
+    />
+    <meta
+      property="twitter:description"
+      content="Khám phá di sản văn hóa Việt Nam qua nền tảng công nghệ hiện đại."
+    />
+    <meta property="twitter:image" content="/twitter-image.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#d4a574" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Preconnect to improve performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <div id="root"></div>
